[gd_scene load_steps=4 format=3 uid="uid://bfvp6uoec3dxw"]

[ext_resource type="Script" path="res://scripts/hand.gd" id="1_7kn7n"]
[ext_resource type="PackedScene" uid="uid://17hxhv2kfbmb" path="res://scenes/hand-column.tscn" id="1_bq2wk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o8th8"]
size = Vector2(989.935, 23.1268)

[node name="Hand" type="Node2D"]
script = ExtResource("1_7kn7n")
counts = Array[int]([1, 2, 3, 4, 5, 6, 7, 8])

[node name="HandColumn1" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(-440, 0)
count = 1
rank = 1

[node name="HandColumn2" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(-314, 0)
rank = 2

[node name="HandColumn3" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(-188, 0)
count = 3

[node name="HandColumn4" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(-63, 0)
count = 4
rank = 4

[node name="HandColumn5" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(63, 0)
count = 5
rank = 5

[node name="HandColumn6" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(190, 0)
count = 6
rank = 6

[node name="HandColumn7" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(317, 0)
count = 7
rank = 7

[node name="HandColumn8" parent="." instance=ExtResource("1_bq2wk")]
position = Vector2(443, 0)
count = 8
rank = 8

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1.99999, -15)
scale = Vector2(1.02633, 9.67487)
shape = SubResource("RectangleShape2D_o8th8")

[connection signal="card_hovered" from="HandColumn1" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn1" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn2" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn2" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn3" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn3" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn4" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn4" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn5" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn5" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn6" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn6" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn7" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn7" to="." method="_on_card_unhovered"]
[connection signal="card_hovered" from="HandColumn8" to="." method="_on_card_hovered"]
[connection signal="card_unhovered" from="HandColumn8" to="." method="_on_card_unhovered"]
[connection signal="input_event" from="Area2D" to="." method="_on_hand_input"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_mouse_exit"]
